# rpi-hw-info

./: .gitignore  CHANGELOG.md  README.md  TASK_LIST_semantic_release_2_0_0.md  job-logs-debug.txt  job-logs.txt  pyproject.toml  rpi-hw-info.py  tasks.md
.github/workflows/: expected-release.yaml  pr.yaml  release.yaml
tests/: test_detector.py  test_version.py
